# s1000d-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
samples/golden/: ddn_sample.xml  procedural_720A.xml
schemas/: xml.xsd
src/s1000d_pipeline/: __init__.py
src/s1000d_pipeline/ast/: __init__.py  builder.py  classify.py  nodes.py  serializer.py
src/s1000d_pipeline/models/: _registry.py
src/s1000d_pipeline/models/appliccrossreftable/: __init__.py  appliccrossreftable.py  dc.py  rdf.py
src/s1000d_pipeline/models/brdoc/: __init__.py  brdoc.py  rdf.py
src/s1000d_pipeline/models/brex/: __init__.py  brex.py  rdf.py
src/s1000d_pipeline/models/checklist/: __init__.py  checklist.py  rdf.py
src/s1000d_pipeline/models/comment/: __init__.py  comment.py  rdf.py
src/s1000d_pipeline/models/comrep/: __init__.py  comrep.py  rdf.py
src/s1000d_pipeline/models/condcrossreftable/: __init__.py  condcrossreftable.py  rdf.py
src/s1000d_pipeline/models/container/: __init__.py  container.py  rdf.py
src/s1000d_pipeline/models/crew/: __init__.py  crew.py  rdf.py
src/s1000d_pipeline/models/ddn/: __init__.py  ddn.py  rdf.py
src/s1000d_pipeline/models/descript/: __init__.py  descript.py  rdf.py
src/s1000d_pipeline/models/dml/: __init__.py  dml.py  rdf.py
src/s1000d_pipeline/models/fault/: __init__.py  fault.py  rdf.py
src/s1000d_pipeline/models/frontmatter/: __init__.py  rdf.py  (+1 more)
src/s1000d_pipeline/parsing/: __init__.py  doctype.py  parser.py  schema_resolver.py
src/s1000d_pipeline/tools/: generate_models.py  sweep.py
tests/: conftest.py  test_round_trip.py
(+36 files in other folders)
